--- a/.classpath
+++ b/.classpath
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_77">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_77">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v6.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/hibernate3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/javassist-3.9.0.GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/mysql-connector-java-5.1.13-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/slf4j-api-1.5.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/slf4j-log4j12-1.5.6.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/antlr-2.7.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/commons-collections-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/dom4j-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/hibernate3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/javassist-3.9.0.GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/jta-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/log4j-1.2.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/mysql-connector-java-5.1.13-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/slf4j-api-1.5.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Downloads/Hibernate Jars/slf4j-log4j12-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/talk/Desktop/junit-4.10.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
