--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Log4JTester</servlet-name>
-		<url-pattern>/test/*</url-pattern>
+		<url-pattern>/logs/*</url-pattern>
 	</servlet-mapping>
 	
   	 <servlet>
