--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 	
   	 <servlet>
 		<servlet-name>bogo</servlet-name>
-		<servlet-class>com.shenkar.controller.ProgramController</servlet-class>
+		<servlet-class>com.shenkar.controller.programController</servlet-class>
 	</servlet>
   	<servlet-mapping>
 		<servlet-name>bogo</servlet-name>
@@ -31,11 +31,10 @@
   	<init-param>
   		<description>Vaadin UI class to use</description>
   		<param-name>UI</param-name>
-  		<param-value>com.shenkar.clientListVaadin.clientList</param-value>
+  		<param-value>com.shenkar.vaadin.clientlist.clientList</param-value>
   	</init-param>
   	<init-param>
-  		<description>
-  		Legacy mode to return the value of the property as a string from AbstractProperty.toString()</description>
+  		<description>Legacy mode to return the value of the property as a string from AbstractProperty.toString()</description>
   		<param-name>legacyPropertyToString</param-name>
   		<param-value>false</param-value>
   	</init-param>
@@ -45,7 +44,7 @@
   	<url-pattern>/clientList/*</url-pattern>
   </servlet-mapping>
   
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>Usersandtasks Application</servlet-name>
     <url-pattern>/UI/*</url-pattern>
   </servlet-mapping>
